--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -6,11 +6,12 @@ dataSources:
     name: TestToken
     network: rinkeby
     source:
-      address: "0x982e00B16c313E979C0947b85230907Fce45d50e"
+      address: '0x982e00B16c313E979C0947b85230907Fce45d50e'
       abi: TestToken
+      startBlock: 7986902
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.2
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Approval
